# sdms-db

./: .gitignore  .gitlab-ci.yml  Cargo.toml  rust-toolchain.toml
benches/: basic_bench.rs  query_bench.rs
src/: lib.rs  value_cmp.rs
src/engine/: db_engine.rs  mod.rs  operators.rs  optimizer.rs
src/engine/db_engine/: private_tests_db_engine.rs
src/engine/operators/: private_tests_operators.rs
src/iceberg/: catalog.rs  manifest.rs  mod.rs  stats.rs  table_metadata.rs  version.rs
src/iceberg/manifest/: private_tests_manifest.rs
src/iceberg/stats/: private_tests_stats.rs
src/storage/: data.rs  file_storage.rs  mod.rs
src/storage/data/: private_tests_data.rs
test_files/: invalid_test_file.example  multi_column_file.example  valid_test_file.example
